# python-simpleshell

./: .gitignore  Makefile  pyproject.toml  requirements.txt
src/sh/: __init__.py  file.py  sh.py
tests/: test_ls.py
